<resources>
    <string name="app_name">智能交通</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">杨先生</string>
    <string name="nav_header_subtitle">276364092@qq.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_logout">登出账户</string>
    <string name="action_exit">退出程序</string>

    <string name="menu_car">我的车辆</string>
    <string name="menu_env">出行环境</string>
    <string name="menu_bus">城市公交</string>
    <string name="menu_road">道路状态</string>
    <string name="menu_custom">创意模块</string>
    <string name="menu_about">关于</string>
    <string name="menu_help">联系客服</string>
    <string name="menu_settings">选择服务器</string>

    <string name="license">Copyright 2019 Ashinch\n\n
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</string>
</resources>
