<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_car"
            android:icon="@drawable/car"
            android:title="@string/menu_car" />
        <item
            android:id="@+id/nav_env"
            android:icon="@drawable/env"
            android:title="@string/menu_env" />
        <item
            android:id="@+id/nav_road"
            android:icon="@drawable/road"
            android:title="@string/menu_road" />
        <item
            android:id="@+id/nav_bus"
            android:icon="@drawable/bus"
            android:title="@string/menu_bus" />
        <item
            android:id="@+id/nav_custom"
            android:icon="@drawable/idea"
            android:title="@string/menu_custom" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/menu_about" />
    </group>

    <item android:title="其他">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/help"
                android:title="@string/menu_help" />
        </menu>
    </item>

</menu>
